--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>{{title}}</h1>
 <app-filters></app-filters>
-<app-movies></app-movies>
+<nav>
+    <a routerLink= "/dashboard">
+        Dashboard
+    </a>
+    <a routerLink="/movies"><!--router link set to /movies which is matched to MoviesComponent. 
+        routerLink turns user clicks into navigations-->
+        Movies
+    </a>
+</nav> 
+<router-outlet></router-outlet><!--placeholder that dynamically changes based on current state-->
