--- a/src/app/moviesComponent/movies.component.html
+++ b/src/app/moviesComponent/movies.component.html
@@ -3,7 +3,7 @@
     <table class="table table-responsive table-striped .table-success">
         <tr>
             <th>Original Title</th>
-            <th *ngIf="showSummary">Overview</th>
+            <th>Overview</th>
             <th>IMDB ID</th>
             <th>Popularity</th>
             <th>Budget</th>
