--- a/src/app/moviesComponent/movies.component.html
+++ b/src/app/moviesComponent/movies.component.html
@@ -3,7 +3,7 @@
     <table class="table table-responsive table-striped .table-success">
         <tr>
             <th>Original Title</th>
-            <th>IMDB ID</th>
+            <th><br></th>
             <th>Popularity</th>
             <th>Budget</th>
             <th>Revenue</th>
@@ -24,12 +24,11 @@
         </tr>
 
         <tr *ngFor="let movie of movies">
-            <td (mouseenter)="showSummary=true" (mouseleave)="showSummary=false">{{movie.original_title}}</td>
-            <td *ngIf="showSummary">{{movie.overview}}</td>
+            <td class="title" (mouseenter)="showSummary=true" (mouseleave)="showSummary=false">{{movie.original_title}}</td>
+            <td *ngIf="showSummary">{{movie.overview}} Movie Id:<em>{{movie.imdb_id}}</em></td>
             <!--<div><td (mouseenter)="showSummary=true" (mouseleave)="showSummary=false">{{movie.original_title}}</td>
                 <td *ngIf="showSummary">{{movie.overview}}</td></div>-->
             <div data-toggle="tooltip" data-placement="bottom" title="{{movie.overview}}"></div>
-            <td class="badge"> <a routerLink="./mock-movie/Movie/imdb_id"> {{movie.imdb_id}}</a></td>
             <td class="popularity">{{movie.popularity}}</td>
             <td class="budget">{{movie.budget}}</td>
             <td class="revenue">{{movie.revenue}}</td>
