--- a/src/app/moviesComponent/movies.component.html
+++ b/src/app/moviesComponent/movies.component.html
@@ -25,7 +25,11 @@
 
         <tr *ngFor="let movie of movies">
             <td class="title" (mouseenter)="showSummary=true" (mouseleave)="showSummary=false">{{movie.original_title}}</td>
-            <td *ngIf="showSummary">{{movie.overview}} Movie Id:<em>{{movie.imdb_id}}</em></td>
+            <td *ngIf="showSummary">
+                <div id="overview">
+                    {{movie.overview}} Movie Id:<em>{{movie.imdb_id}}</em>
+                </div>
+            </td>
             <!--<div><td (mouseenter)="showSummary=true" (mouseleave)="showSummary=false">{{movie.original_title}}</td>
                 <td *ngIf="showSummary">{{movie.overview}}</td></div>-->
             <div data-toggle="tooltip" data-placement="bottom" title="{{movie.overview}}"></div>
