more styling changes attempting to fix navigation to movie detail page.

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="movie">
 
-    <h2>{{movie.original_title | uppercase}} Details</h2>
-    <div><span>id: </span>{{movie.id}}</div>
-    <div>
-      <label for="movie-name">Movie name: </label>
-      <!-- TODO FIX THIS <input id="movie-name" [(ngModel)]="movie.original_title" placeholder="Movie Name"/> -->
-    </div>
-  <button type="button" (click)="goBack()">go back</button>
+  <h2>{{movie.original_title | uppercase}} Details</h2>
+  <div><span>id: {{movie.imdb_id}} </span>{{movie.overview}}</div>
+  <div>
+    <label for="movie-name">Movie name: </label>
+    <input id="movie-name" [(ngModel)]="movie.original_title" placeholder="Movie Name" />
   </div>
+  <button type="button" (click)="goBack()">go back</button>
+</div>
