--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h1{
+    text-align: center;
+}
+a{
+    padding: 20px, 50px;
+    border: 1px solid black;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: rgb(223, 221, 221);
+}
+
+
 
 
