--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -20,9 +20,9 @@ h2 {
   
   a {
     background-color: #3f525c;
-    border-radius: 2px;
+    border-radius: 5px;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-size: 16px;
     text-decoration: none;
     display: inline-block;
     color: #fff;
