--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -21,15 +21,15 @@ h2 {
   a {
     background-color: #3f525c;
     border-radius: 5px;
-    padding: 1rem;
-    font-size: 16px;
-    text-decoration: none;
+    padding: 5px;
+    font-size:medium;
     display: inline-block;
     color: #fff;
     text-align: center;
     width: 100%;
+    height: 50px;
     min-width: 70px;
-    margin: .5rem auto;
+    margin: auto;
     box-sizing: border-box;
   
     /* flexbox */
