added links to trailer and movie to move details

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -5,6 +5,8 @@
   <div>
     <label for="movie-name">Movie name: </label>
     <input id="movie-name" [(ngModel)]="movie.original_title" placeholder="Movie Name" />
+    <span><a href="https://www.imdb.com/trailers/">Trailer</a></span>
+    <span><a href="https://www.vudu.com/">Watch here!</a></span>
   </div>
   <button type="button" (click)="goBack()">go back</button>
 </div>
