--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,15 +5,18 @@
 h1{
     text-align: center;
     font-weight: bold;
+    color: white;
 }
 
 a{
     padding: 20px, 50px;
-    border: 1px solid black;
+    border: 1px solid blue;
     margin: 10px;
     border-radius: 5px;
-    background-color: rgb(223, 221, 221);
+    background-color: #435960;
+    color: white;
 }
+
 
 
 
