--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <app-filters></app-filters>
-<nav>
+<nav id="tabs">
     <a routerLink= "/dashboard">
         Dashboard
     </a>
