--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -2,14 +2,13 @@
 
 h2 {
     text-align: center;
+    color: white;
   }
   
   .movies-menu {
     padding: 0;
     margin: auto;
     max-width: 1000px;
-  
-    /* flexbox */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -31,8 +30,7 @@ h2 {
     min-width: 70px;
     margin: auto;
     box-sizing: border-box;
-  
-    /* flexbox */
+    opacity: 95%;
     order: 0;
     flex: 0 1 auto;
     align-self: auto;
