--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -7,6 +7,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    opacity: 95%;
   }
   button:hover {
     background-color: #000;
