Changes to be committed: 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/app.module.ts 	modified:   src/app/filters/filters.component.html 	modified:   src/app/filters/filters.component.ts 	modified:   src/app/message.service.ts 	new file:   src/app/messages/messages.component.css 	new file:   src/app/messages/messages.component.html 	new file:   src/app/messages/messages.component.spec.ts 	new file:   src/app/messages/messages.component.ts 	modified:   src/app/movie-detail/movie-detail.component.html 	modified:   src/app/movie-detail/movie-detail.component.ts 	new file:   src/app/movie-search/movie-search.component.css 	new file:   src/app/movie-search/movie-search.component.html 	new file:   src/app/movie-search/movie-search.component.spec.ts 	new file:   src/app/movie-search/movie-search.component.ts 	modified:   src/app/movie.service.ts 	modified:   src/app/moviesComponent/movies.component.html 	modified:   src/app/moviesComponent/movies.component.ts 	new file:   src/app/title.pipe.spec.ts so much

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
     </a>
 </nav> 
 <router-outlet></router-outlet><!--placeholder that dynamically changes based on current state-->
+<app-messages></app-messages>
