--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center">
+<!--<div class="d-flex justify-content-center">
     <button class= "btn-lg btn-secondary mr-1" type="button" >Clear Filters</button>
     <button class= "btn border-dark mr-1" type="button" >Popularity</button>
     <button class= "btn border-dark mr-1" type="button" >Budget</button>
@@ -7,6 +7,7 @@
     <button class= "btn border-dark mr-1" type="button" >Cast</button>
     <button class= "btn border-dark mr-1" type="button" >Homepage</button>
     <button class= "btn border-dark mr-1" type="button" >Director</button>
-</div>
+</div> -->
 
 <!-- [class.selected]="hero === selectedHero" (click)="onSelect(hero)" -->
+
