--- a/src/app/moviesComponent/movies.component.html
+++ b/src/app/moviesComponent/movies.component.html
@@ -1,5 +1,6 @@
 <div class="mt-5">
     <h2 class="header" id="careerstats">Filtered Movies</h2>
+    <app-movie-search></app-movie-search>
     <table class="table table-responsive table-striped .table-success">
         <tr>
             <th>Original Title</th>
@@ -26,8 +27,9 @@
 
         <tr class="movies">
             <td *ngFor= "let movie of movies">
-                <button [class.selected] = "movie === selectedMovie" type="button" (click)="onSelect(movie)">
-                    <span class="name" routerLink="/detail/{{movie.original_title}}">{{movie.original_title}}</span>
+                <button type="button" (click)="onSelect(movie)" [class.selected]="movie === selectedMovie">
+                    <span class="name" routerLink="/detail/{{movie.original_title}}">{{movie.original_title}} </span>
+                    <a class="more" href="https://www.imdb.com/title/{{movie.imdb_id}}/?ref_=nv_sr_srsg_0">More</a>
                     <span class="badge" routerLink="/detail/{{movie.imdb_id}}">{{movie.imdb_id}}</span>
                     <span class="popularity" routerLink="/detail/{{movie.popularity}}">{{movie.popularity}}</span>
                     <span class="budget" routerLink="/detail/{{movie.budget}}">{{movie.budget}}</span>
@@ -49,5 +51,23 @@
                 </button>
             </td>
         </tr>
-    </table>
+    </table> 
+
   </div>
+
+  <!-- <h2> Our Movies </h2>
+  <app-movie-search></app-movie-search>
+  <div>
+   <label for="new-movie">Find stuff: </label>
+  <input id="new-movie" #movieName />
+
+  <button type="button" (click)="searchMovies(movieName.value); movieName.value=''">Search Movies</button>
+  </div> 
+  <ul class="movies">
+      <li *ngFor="let movie of movies">
+          <a routerLink="/detail/{{movie.id}}">
+              <span class="badge">{{movie.id}}</span>
+              {{movie.original_title}}
+          </a>
+      </li>
+  </ul> -->
