made component interaction more clear via comments. Commented out desired functionality

--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -1,4 +1,6 @@
 <div class="d-flex justify-content-center">
+    <!--Fileters should have drop down feature for user to select year (from x to y), actors/actress, 
+    genre, revenue and budget. Make pipe to help filter the movies???-->
     <button class= "btn-lg btn-secondary mr-1" type="button" >Clear Filters</button>
     <button class= "btn border-dark mr-1" type="button" >Popularity</button>
     <button class= "btn border-dark mr-1" type="button" >Budget</button>
