--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="movie">
-
+<!--Page should show movie title or movie picture, brief description, trailer and link to watch-->
   <h2>{{movie.original_title | uppercase}} Details</h2>
   <div><span>id: {{movie.imdb_id}} </span>{{movie.overview}}</div>
   <div>
