--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
+<!--this is the homepage-->
 <h1>{{title}}</h1>
 <app-filters></app-filters>
+
 <nav id="tabs">
-    <a routerLink= "/dashboard">
-        Dashboard
+    <!--Nav bar containing anchors directing user to full list of movies and home page-->
+    <a routerLink="">
+        Homepage <!--should take you to homepage app.component.html-->
     </a>
-    <a routerLink="/movies"><!--router link set to /movies which is matched to MoviesComponent. 
-        routerLink turns user clicks into navigations-->
+    <a routerLink="/movies"><!--should take you to list of movies in table format. moviesComponent-->
         Movies
     </a>
 </nav>
-
+<app-dashboard></app-dashboard>
+<app-movies></app-movies>
 <router-outlet></router-outlet><!--placeholder that dynamically changes based on current state-->
