--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
+<br>
 <h2>Top Movies</h2>
+<h4><em>Select one of the below movies to learn more.</em></h4>
 <div class = "movies-menu">
     <!--When movie anchor is clicked, user should be directed to movie-detail page of the movie-->
     <a *ngFor="let movie of movies" routerLink="/detail/{{movie.id}}">
