--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,14 @@
 <!--this is the homepage-->
 <h1>{{title}}</h1>
-<app-filters></app-filters>
-
 <nav id="tabs">
     <!--Nav bar containing anchors directing user to full list of movies and home page-->
-    <a routerLink="">
+    <a routerLink="/dashboard">
         Homepage <!--should take you to homepage app.component.html-->
     </a>
     <a routerLink="/movies"><!--should take you to list of movies in table format. moviesComponent-->
-        Movies
+        List of Movies
     </a>
 </nav>
-<app-dashboard></app-dashboard>
-<app-movies></app-movies>
-<router-outlet></router-outlet><!--placeholder that dynamically changes based on current state-->
+<app-filters></app-filters>
+<router-outlet></router-outlet><!--Tells router where to display routed views. placeholder that dynamically changes based on current state-->
+<app-messages></app-messages>
